src/objects/Payment_Term__c.object
<CustomObject>
    <description>Object used to capture Payment Term information, to be used on Quotes.</description>
    <fields>
        <fullName>No_of_Installments__c</fullName>
        <label>No of Installments</label>
        <summaryForeignKey>Payment_Term_Detail__c.Payment_Term__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Payments__c</fullName>
        <label>Number Of Payments</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yardi_Code__c</fullName>
        <label>Yardi Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Half-Yearly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Tri-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Terms</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Yardi_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>